--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-star-ratings": "^2.3.0",
     "bootstrap": "^5.1.3",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
@@ -27,6 +28,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "react-star-ratings": "^2.3.0",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.1",
     "redux-devtools-extension": "^2.13.9",
