--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^11.4.2",
     "react-icons": "^4.4.0",
     "react-localization": "^1.0.17",
+    "react-multi-carousel": "^2.8.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
