--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.8",
     "react-localization": "^1.0.17",
     "react-multi-carousel": "^2.8.2",
     "react-redux": "^7.2.6",
