service page ui ok.but remain resize image gallery

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.3.3"
+    "@types/react-datepicker": "^4.3.3",
+    "@types/react-image-gallery": "^1.0.5"
   }
 }
