--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-star-ratings": "^2.3.0",
     "@types/styled-components": "^5.1.25",
@@ -74,8 +75,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-datepicker": "^4.3.3"
   }
 }
