--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-datepicker": "^4.5.0",
@@ -43,6 +44,9 @@
     "sass-loader": "^12.3.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^5.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -55,8 +59,8 @@
     "eject": "react-scripts eject",
     "start": "npm-run-all -p watch-css start-js",
     "build": "CI=true npm run build-css && npm run build-js",
-    "lint:ts": "tslint 'src/**/*.{ts,tsx,js}'",
-    "fix": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
+    "lint:ts": "tslint -c tslint.json -p tsconfig.json 'src/**/*.{ts,tsx,js}'",
+    "fix": "tslint --fix -c ./tslint.json -p tsconfig.json 'src/**/*{.ts,.tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +68,14 @@
       "react-app/jest"
     ]
   },
+  "prettier": {
+    "singleQuote": true
+  },
+  "precommit.silent": false,
+  "pre-commit": [
+    "fix",
+    "build-js"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -75,5 +87,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "pre-commit": "^1.2.2"
   }
 }
