--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/assets/styles -o src/assets/styles/ --watch --recursive",
     "start-js": "react-scripts start",
     "build-js": "CI=true react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start": "npm-run-all -p watch-css start-js",
     "build": "CI=true npm run build-css && npm run build-js",
@@ -71,11 +70,12 @@
   "prettier": {
     "singleQuote": true
   },
-  "precommit.silent": false,
-  "pre-commit": [
-    "fix",
-    "build-js"
-  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run fix",
+      "pre-push": "npm run build-js"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -91,6 +91,7 @@
   "devDependencies": {
     "@types/react-datepicker": "^4.3.3",
     "@types/react-image-gallery": "^1.0.5",
+    "husky": "^8.0.1",
     "pre-commit": "^1.2.2"
   }
 }
