--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -29,7 +29,7 @@ pipelines:
                 AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
                 S3_BUCKET: $STAGING_BUCKET_NAME
-                ACL: "public-read"
+                ACL: "private"
                 LOCAL_PATH: "build"
       - step:
           name: Invalidate Cloudfront Cache
