--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "amazon-chime-sdk-js": "^3.1.0",
     "aws-amplify": "^4.3.27",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.4",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-calendar": "^3.7.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
@@ -40,6 +42,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-select": "^5.4.0",
+    "react-slick": "^0.29.0",
     "react-star-ratings": "^2.3.0",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.1",
@@ -47,6 +50,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
     "sass-loader": "^12.3.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "tslint": "^6.1.3",
@@ -96,8 +100,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.5.2",
     "@types/react-datepicker": "^4.3.3",
     "@types/react-image-gallery": "^1.0.5",
+    "@types/react-slick": "^0.23.10",
     "husky": "^8.0.0",
     "pre-commit": "^1.2.2"
   }
