--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "amazon-chime-sdk-js": "^3.1.0",
     "aws-amplify": "^4.3.27",
     "bootstrap": "^5.1.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
@@ -30,6 +32,7 @@
     "react-bootstrap": "^2.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^11.4.2",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.8",
@@ -96,7 +99,9 @@
     ]
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/react-datepicker": "^4.3.3",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-image-gallery": "^1.0.5",
     "husky": "^8.0.0",
     "pre-commit": "^1.2.2"
