--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "immutable": "^4.1.0",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
