--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/assets/styles -o ./src/assets/styles/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/assets/styles -o src/assets/styles/ --watch --recursive",
     "start-js": "react-scripts start",
-    "build-js": "CI=true react-scripts build",
+    "build-js": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "CI=true npm run build-css && npm run build-js",
+    "build": "npm run build-css && npm run build-js",
     "lint:ts": "tslint -c tslint.json -p tsconfig.json 'src/**/*.{ts,tsx,js}'",
     "fix": "tslint --fix -c ./tslint.json -p tsconfig.json 'src/**/*{.ts,.tsx}'",
     "husky-install": "husky install",
